k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-edge
  template:
    metadata:
      labels:
        app: nginx-edge
    spec:
      containers:
        - name: nginx
          image: nginx-edge
          imagePullPolicy: Never
          ports:
            - containerPort: 80
