k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-edge
spec:
  type: ClusterIP
  selector:
    app: nginx-edge
  ports:
    - port: 80
      targetPort: 80
